[package]
name = "aptos_client_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
bcs = "0.1.3"
once_cell = "1.13.0"
rand = "0.7.3"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"